# pacman-clone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
idk/: CMakeLists.txt
src/: entity.h  ghost.cpp  ghost.h  globals.h  main.cpp  math_helper.h  overloaded.h  pacman.cpp  pacman.h  score_popup.h  text.h  timer.h
